--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="UTF-8" />
+    <title>Mon Site Personnel</title>
     <link rel="stylesheet" href="style.css" />
-  <title>My Personal Website</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
+    <h1>Bienvenue sur mon site personnel !</h1>
+    <button onclick="afficherMessage()">Cliquez ici</button>
     <script src="script.js"></script>
   </body>
 </html>
