Ajout de styles pour le body et les sections

--- a/mon-site-personnel/index.html
+++ b/mon-site-personnel/index.html
@@ -8,6 +8,22 @@
   <body>
     <h1>Bienvenue sur mon site personnel !</h1>
     <button onclick="afficherMessage()">Cliquez ici</button>
+    <section id="about">
+  <h2>À propos de moi</h2>
+  <p>Je m'appelle Gardin. Je suis passionné par le développement, la gestion des affaires, et j'aime créer des projets utiles.</p>
+</section>
+<section id="projects">
+  <h2>Mes projets</h2>
+  <ul>
+    <li>Site web personnel</li>
+    <li>Application mobile en cours</li>
+    <li>Projet d’automatisation d’entreprise</li>
+  </ul>
+</section>
+<section id="contact">
+  <h2>Contact</h2>
+  <p>Tu peux me contacter à : <a href="mailto:gardin@email.com">gardin@email.com</a></p>
+</section>
     <script src="script.js"></script>
   </body>
 </html>
